# phppp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  runlsp.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: ROADMAP.md  dev_guide.md  user_guide.md
examples/: big.php  calculator.php  hello.php  user.php
src/: analyzer.rs  composer.rs  config.rs  fs.rs  indexer.rs  laravel.rs  lib.rs  logging.rs  main.rs  metrics.rs  parser.rs  plugin.rs  resolver.rs  server.rs
tests/: composer.rs  example_big.rs  example_calculator.rs  example_hello.rs  example_user.rs  indexer.rs  lsp.rs  parser_examples.rs  resolver.rs  stress.rs
tests/golden/: big_symbols.txt
