[package]
name = "phppp"
version = "0.1.4"
edition = "2024"

[lib]
name = "phppp"
path = "src/lib.rs"

[[bin]]
name = "phppp"
path = "src/main.rs"
test = false

[[bin]]
name = "example"
path = "src/bin/example.rs"
test = false

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
notify = "6"
rayon = "1"
bumpalo = "3"
tree-sitter = "0.25.6"
tree-sitter-php = "0.23.11"
dashmap = "5"
regex = "1"
log = "0.4.27"
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
which = "5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
